# miya_core

./: .gitignore  .gitmodules  CMakeLists.txt  haveto.txt  重要メモ.txt
chain/: CMakeLists.txt  IBD.cpp  IBD.h  IBD.hpp  IBD_manager.hpp  block_assembler.cpp  block_assembler.hpp  chain.cpp  chain.hpp  chain_manager.cpp  chain_manager.h  chain_manager.hpp  chain_state.cpp  chain_state.hpp  chain_sync_manager.cpp  chain_sync_manager.hpp  chain_sync_observer.cpp  chain_sync_observer.hpp
chain/block/: block.cpp  block.h  block.hpp  block.params.cpp  block.params.hpp  block.utils.hpp  block_header.cpp  block_header.h  block_header.hpp
chain/block_chain_iterator/: block_chain_iterator.cpp  block_chain_iterator.h
chain/block_chain_manager/: block_chain_manager.cpp  block_chain_manager.h
chain/chain_sync_manager/: BDBCB.cpp  BDBCB.h  bd_filter.cpp  bd_filter.h  block_hash_as_key.cpp  block_hash_as_key.h  block_hash_pool.cpp  block_header_pool.cpp  chain_sync_manager.cpp  chain_sync_manager.h  prev_block_hash_as_key.cpp  prev_block_hash_as_key.h  virtual_block.cpp  virtual_block.h  virtual_block_sync_manager.cpp  virtual_block_sync_manager.h  virtual_header_subchain.cpp  virtual_header_subchain.h  virtual_header_sync_manager.cpp  virtual_header_sync_manager.h
chain/mining/: simple_mining.cpp  simple_mining.h
chain/miya_coin/: block_container.cpp  local_file_controller.cpp  local_strage_manager.cpp  local_strage_manager.h  undo_container.cpp
chain/transaction/: tx.hpp  tx.params.hpp  tx.utils.hpp
chain/transaction_pool/: mempool.cpp  mempool.hpp  mempool_entry.cpp  mempool_entry.hpp  transaction_pool.cpp  transaction_pool.h  txcb.cpp  txcb.h  txcb_bucket.cpp  txcb_bucket.h  txcb_table.cpp  txcb_table.h  unit_test.cpp  unit_test.h
chain/utxo_set/: utxo.cpp  utxo.h  utxo_set.cpp  utxo_set.h
chain/validation/: validation.cpp  validation.h
core/: core.cpp  (+6 more)
ekp2p/: CMakeLists.txt  ekp2p.cpp  ekp2p.h  protocol.h
ekp2p/kademlia/: .common.cpp  .k_routing_table.cpp  .k_routing_table.h  .k_tag.h  .message_sender.h  common.cpp  common.h  connection_controller.cpp  connection_controller.h  connection_controller_body.h  container_mappings.h  k_bucket.cpp  k_bucket.h  k_node.cpp  k_node.h  k_routing_table.cpp  k_routing_table.h  k_tag.cpp  k_tag.h  message_receiver.cpp  message_receiver.h  node.cpp  node.h  protocol.h
miya_chain/: CMakeLists.txt  IBD.cpp  IBD.h  chain_manager.cpp  chain_manager.h  miya_chain_manager.cpp  miya_chain_manager.h  miya_chain_state.cpp  miya_chain_state.h  miya_core_manager.cpp  miya_core_manager.h
miya_chain/block/: block.cpp  block.h  block_c_iterator.cpp  block_c_iterator.h  block_header.cpp  block_header.h
miya_chain/block_assemble_agent/: block_accemble_agent.cpp  block_accemble_agent.h
miya_chain/block_chain_iterator/: block_chain_iterator.cpp  block_chain_iterator.h
miya_chain/block_chain_manager/: IBD.cpp  IBD.h  block_chain_manager.cpp  block_chain_manager.h  guide.txt
miya_chain/chain_sync_manager/: BDBCB.cpp  bd_filter.cpp  bd_filter.h  block_hash_as_key.cpp  block_hash_as_key.h  block_hash_pool.cpp  chain_sync_manager.cpp  chain_sync_manager.h  prev_block_hash_as_key.cpp  prev_block_hash_as_key.h  virtual_block.cpp  virtual_block.h  virtual_block_sync_manager.cpp  virtual_block_sync_manager.h  virtual_header_subchain.cpp  virtual_header_subchain.h  virtual_header_sync_manager.cpp
miya_chain/fork/: fork.h
miya_chain/header/: header.h
miya_chain/inv/: inv.h
miya_chain/message/: __test.cpp  message.cpp  message.h
miya_chain/mining/: simple_mining.cpp  simple_mining.h
miya_chain/miya_coin/: block_container.cpp  local_file_controller.cpp  local_strage_manager.cpp  local_strage_manager.h  undo_container.cpp
miya_chain/transaction_pool/: transaction_pool.cpp  transaction_pool.h  txcb.cpp  txcb.h  txcb_bucket.cpp  txcb_bucket.h  txcb_table.cpp  txcb_table.h  unit_test.cpp  unit_test.h
miya_chain/utxo_set/: utxo.cpp  utxo.h  utxo_set.cpp  utxo_set.h
miya_chain/validation/: validation.cpp  validation.h
miya_chain/virtual_chain/: BDBCB.cpp  BDBCB.h  bd_filter.cpp  bd_filter.h  block_hash_as_key.cpp  block_hash_as_key.h  block_hash_pool.cpp  block_header_pool.cpp  prev_block_hash_as_key.cpp  prev_block_hash_as_key.h  virtual_block.cpp  virtual_block.h  virtual_block_sync_manager.cpp  virtual_block_sync_manager.h  virtual_chain.cpp  virtual_chain.h  virtual_header_subchain.cpp  virtual_header_subchain.h  virtual_header_sync_manager.cpp  virtual_header_sync_manager.h  virtual_subchain.cpp  virtual_subchain.h  virtual_subchain_manager.cpp  virtual_subchain_manager.h
miya_core/: CMakeLists.txt  miya_core.cpp  miya_core.h  miya_core.hpp
miya_db/: CMakeLists.txt
miya_db/database_manager/: database_manager.cpp  database_manager.h
miya_db/miya_db/: CMakeLists.txt  database_manager.cpp  database_manager.h  flow.txt  miya_db.cpp  miya_db.h
miya_db/miya_db_client/: miya_db_client.h
miya_db/strage_manager/: CMakeLists.txt
node_gateway/: CMakeLists.txt  broker.cpp  services.hpp  ss_command_observer.cpp  ss_command_observer.hpp  ss_command_observer_strage.cpp  ss_command_observer_strage.hpp
node_gateway/message/: __test.cpp  __test.h  message.cpp  message.h  message.hpp  message.impl.hpp  parser.hpp
share/: CMakeLists.txt  binary_utils.hpp
share/hash/: sha_hash.cpp  sha_hash.h
share/miya_db_client/: common.h  miya_db_sb_client.cpp  miya_db_sb_client.h
share/observer/: observer.cpp  observer.hpp  observer_strage.hpp
share/stream_buffer/: stream_buffer.cpp  stream_buffer.h  stream_buffer_container.cpp
shared_components/: CMakeLists.txt
shared_components/cipher/: ecdsa_manager.cpp  ecdsa_manager.h
shared_components/hash/: sha_hash.cpp  sha_hash.h
shared_components/middle_buffer/: middle_buffer.cpp  middle_buffer.h
shared_components/miya_db_client/: common.h  miya_db_client.cpp  miya_db_sb_client.cpp  miya_db_sb_client.h
shared_components/smart_middle_buffer/: middle_buffer_manager.h  smart_middle_buffer.cpp  smart_middle_buffer.h
ss_p2p_node_controller/: .gitignore  CMakeLists.txt  boot_node_lists.json
(+524 files in other folders)
